[package]
name = "process_list"
version = "0.1.2"
authors = ["mgostIH"]
edition = "2018"
description = "Crate for listing the processes open in the OS, usually for retrieving their ID by their name."
license = "MIT"
repository = "https://github.com/mgostIH/process_list"
readme = "README.md"
documentation = "https://docs.rs/process_list/0.1.2/process_list/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4", optional = true}


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["tlhelp32", "winnt", "handleapi"] }

[dev-dependencies]
env_logger = "0.7.1"

